--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,45 @@
-.App {
+body{
+  background: #999;
+}
+
+.app-content {
+  width: 600px;
+  margin: auto;
+  padding: 40px;
+  align-content: center;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.control-row {
+  margin-bottom: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 650px) {
+  .app-content {
+    margin: 20px 20px 0;
+    width: auto;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+.row{
+  align-self: center;
+  padding-bottom: 4px;
+}
+
+#timeDisplay{
+  background: #333;
+  color: #999;
+  margin: auto;
+  width: 150px;
+  border-radius: 25px;
+  margin-bottom: 8px;
+}
+
+h2{
+  margin: auto;
+}
+
+.btn{
+  margin: auto;
 }
