--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 body{
-  background: #999;
+  background: #000022;
+  background-image: url('../src/images/night_sky.jpg');
+  background-repeat: no-repeat;
+  background-size:auto;
 }
 
 .app-content {
